# ckanext-bulk

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  gulpfile.js  index.html  mkdocs.yml  package-lock.json  pyproject.toml  setup.cfg  sitemap.xml  test.ini  tsconfig.json
.github/workflows/: test.yml
ckanext/bulk/: bulk_entity.py  cli.py  config.py  config_declaration.yaml  const.py  entity_manager.py  helpers.py  interfaces.py  plugin.py  utils.py  views.py
ckanext/bulk/assets/: webassets.yml
ckanext/bulk/assets/scripts/: bulk-datepicker.js  bulk-izi-modal.js  bulk-izi-toast.js  bulk-manager-form.js  bulk-scrollbar.js  bulk-slick.js  bulk-sortable.js  bulk-swal.js  bulk-tom-select.js  bulk.js
ckanext/bulk/assets/scss/: _cssvars.scss  _fonts.scss  _global.scss  _vendor.scss  bulk.scss
ckanext/bulk/assets/scss/elements/: _accordion.scss  _forms.scss  _modals.scss  _progressbar.scss
ckanext/bulk/assets/styles/: bulk.css
ckanext/bulk/entity_managers/: base.py  dataset.py  group.py
ckanext/bulk/logic/: action.py  auth.py  schema.py  validators.py
ckanext/bulk/migration/bulk/: alembic.ini
ckanext/bulk/migration/bulk/versions/: 001_cc1a832108c5_create_something_table.py
ckanext/bulk/model/: something.py
ckanext/bulk/schemas/: presets.yaml
ckanext/bulk/templates/bulk/: complex.html  manager.html  manager_form.html
ckanext/bulk/templates/bulk/snippets/: filter_item.html  (+2 more)
ckanext/bulk/tests/: conftest.py  test_cli.py  test_config.py  test_entity_managers.py  test_helpers.py  test_plugin.py  test_views.py
ckanext/bulk/tests/benchmarks/: test_speed.py
ckanext/bulk/tests/logic/: test_action.py  test_auth.py  test_schema.py  test_validators.py
ckanext/bulk/tests/model/: test_something.py
config/: project.ini
cypress/e2e/: sandbox.cy.ts  swal.cy.ts
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/search/: search_index.json
