[metadata]
name = ckanext-bulk
version = 0.1.4
description = Bulk update for CKAN datasets/resources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Link Digital/ckanext-bulk
author = mutantsan
author_email = kvaqich@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
            Programming Language :: Python :: 3.11
            Programming Language :: Python :: 3.12
            Programming Language :: Python :: 3.13
keywords = CKAN

[options]
python_requires = >= 3.8
packages = find:
namespace_packages = ckanext
include_package_data = True
install_requires =
                 typing_extensions

[options.entry_points]
ckan.plugins =
             bulk = ckanext.bulk.plugin:BulkPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]
test =
     pytest-ckan
     pytest-benchmark
     pytest-pretty

docs =
     mkdocs
     mkdocs-material
     pymdown-extensions
     mkdocstrings[python]

dev =
    %(test)s
    %(docs)s
    pre-commit

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/bulk/i18n/ckanext-bulk.pot
width = 80

[init_catalog]
domain = ckanext-bulk
input_file = ckanext/bulk/i18n/ckanext-bulk.pot
output_dir = ckanext/bulk/i18n

[update_catalog]
domain = ckanext-bulk
input_file = ckanext/bulk/i18n/ckanext-bulk.pot
output_dir = ckanext/bulk/i18n
previous = true

[compile_catalog]
domain = ckanext-bulk
directory = ckanext/bulk/i18n
statistics = true
